# Rationals

./: CMakeLists.txt  test.cpp  tester.cpp
Rational/: CMakeLists.txt  Rational.cpp  Rational.h  Rational.hpp  test.cpp
doctest/: doctest.h
